--- a/AboutPage/AboutPage.html
+++ b/AboutPage/AboutPage.html
@@ -37,15 +37,13 @@
 <h1>We have a physical store!</h1>
     <p>
     If you are not a fan of just looking through a screen
-    when choosing your products you can visit our physical shop 
-    <a href="https://www.google.com/maps/place/Loe+Nekan/
-    @30.2629016,67.3018477,18z/data=!4m6!3m5!1s0x3ed2d5cc
-    b92413e9:0x1bcde8c12851b999!8m2!3d30.2625!4d67.301388
-    8!16s%2Fg%2F11b7crhw36?entry=ttu&g_ep=EgoyMDI1MDIwOS4
-    wIKXMDSoJLDEwMjExMjMzSAFQAw%3D%3D">here</a>
+    when choosing your products you can visit our physical shop
+    on the map down below 
     and our highly trained proffetionals will help you out with
     testing out the products you want!
     </p>
+
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d131155.16219030877!2d67.27993316378262!3d30.251415867193295!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ed2d5ccb92413e9%3A0x1bcde8c12851b999!2sLoe%20Nekan!5e0!3m2!1sbg!2sbg!4v1739375830648!5m2!1sbg!2sbg" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
 </body>
 </html>
