Formatted AboutPage.html

--- a/AboutPage/AboutPage.html
+++ b/AboutPage/AboutPage.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html>
 
-<title>Acme.inc</title>
+<head>
+    <title>Acme.inc</title>
+    <link rel="stylesheet" type="text/css" href="AboutPage.css"/>
+</head>
 
 <body>
+ 
+    <h1>About us</h1> 
 
-    <link rel="stylesheet" type="text/css" href="AboutPage.css"/> 
-
-<h1>About us</h1> 
-
-<p>The staff of Acme.inc is made of
+    <p>The staff of Acme.inc is made of
     people who have passion toward building,
     maintining and reparing personal computers
     and other electronic devices. We also sell
@@ -18,15 +19,16 @@
     server equipment, software and services.
     </p>
 
-<h1>What is our goal?</h1>
+    <h1>What is our goal?</h1>
     <p>
     Our goal is to keep up with the latest
     technologies and be as complient as possible
     and at the same time be able to provide the help necessery
     to extend the life of every product and help maintain its integrity.
+
     </p>
 
-<h1>Why trust us?</h1>
+    <h1>Why trust us?</h1>
     <p>
     The staff of Acme.inc is looking forward to be the best
     in the country. We have high standards and tight tolerances toward 
@@ -34,7 +36,7 @@
     5 years of experience.
     </p>
 
-<h1>We have a physical store!</h1>
+    <h1>We have a physical store!</h1>
     <p>
     If you are not a fan of just looking through a screen
     when choosing your products you can visit our physical shop
