footer + cart in nav bar

--- a/homepage/homepage.html
+++ b/homepage/homepage.html
@@ -17,6 +17,7 @@
     <li><a href="#products">Products</a></li>
     <li><a href="#about">About Us</a></li>
     <li><a href="#contact">Contact</a></li>
+    <li><a href="#card">icon</a></li>
   </ul>
 </nav>
 
@@ -40,13 +41,13 @@
       <button class="product-button">View Details</button>
     </div>
     <div class="card">
-      <img src="https://via.placeholder.com/200" alt="Product 2" />
+      <img src="" alt="Product 2" />
       <h3>Graphics Cards</h3>
       <p>Top-tier GPUs for gaming and professional work.</p>
       <button class="product-button">View Details</button>
     </div>
     <div class="card">
-      <img src="https://via.placeholder.com/200" alt="Product 3" />
+      <img src="" alt="Product 3" />
       <h3>SSD Storage</h3>
       <p>Blazing-fast SSDs for improved performance.</p>
       <button class="product-button">View Details</button>
