--- a/homepage/homepage.html
+++ b/homepage/homepage.html
@@ -17,6 +17,7 @@
     <li><a href="#products">Products</a></li>
     <li><a href="#about">About Us</a></li>
     <li><a href="#contact">Contact</a></li>
+    <li><a href="#cart">Incon</a></li>
   </ul>
 </nav>
 
