Added css to the about \page

--- a/AboutPage/AboutPage.html
+++ b/AboutPage/AboutPage.html
@@ -7,6 +7,38 @@
 </head>
 
 <body>
+    <div class = "row">
+
+
+            <div class = "col">
+
+                <div class = "leftside">
+
+
+                </div>
+
+            </div>
+
+
+
+            <div class = "col">
+
+                <div class = "rightside">
+
+
+
+                    
+                </div>
+
+
+
+            </div>
+
+
+
+
+
+    </div>
  
     <h1>About us</h1> 
 
@@ -48,9 +80,11 @@
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d131155.16219030877!2d67.27993316378262!3d30.251415867193295!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ed2d5ccb92413e9%3A0x1bcde8c12851b999!2sLoe%20Nekan!5e0!3m2!1sbg!2sbg!4v1739375830648!5m2!1sbg!2sbg" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
 
-    <h1>Contect us</h1>
+    <h1>Contact us</h1>
     <p>
-     Phone ->  087 9648 765
+     Phone ->  087 9648 765 
+    </p>
+    <p>
      e-mail -> AcmeInc@example.com
     </p>
     
