--- a/AboutPage/AboutPage.html
+++ b/AboutPage/AboutPage.html
@@ -1,60 +1,60 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
+    <link rel="stylesheet" href="AboutPage.css"/>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Acme.inc</title>
-    <link rel="stylesheet" type="text/css" href="AboutPage.css"/>
+
 </head>
 
-<body>
-    
-    <h1>About us</h1> 
 
-    <p>The staff of Acme.inc is made of
-    people who have passion toward building,
-    maintining and reparing personal computers
-    and other electronic devices. We also sell
-    gaming computers, business computers, 
-    computer hardware, tablets, mobile phones,
-    server equipment, software and services.
-    </p>
+    <body>
+        <div class="left-side">
+            <h1>About us</h1>
+            <p>The staff of Acme.inc is looking forward to be the best
+                in the country. We have high standards and tight tolerances toward 
+                everyone in the company. Each member is handpicked and has at least
+                5 years of experience.
+            </p>
 
-    <h1>What is our goal?</h1>
-    <p>
-    Our goal is to keep up with the latest
-    technologies and be as complient as possible
-    and at the same time be able to provide the help necessery
-    to extend the life of every product and help maintain its integrity.
+            <h1>What is our goal?</h1>
+            <p>Our goal is to keep up with the latest
+                technologies and be as compliant as possible
+                and at the same time be able to provide the help necessary
+                to extend the life of every product and help maintain its integrity.
+            </p>
 
-    </p>
+            <h1>Why trust us?</h1>
+            <p>The staff of Acme.inc is looking forward to be the best
+                in the country. We have high standards and tight tolerances toward 
+                everyone in the company. Each member is handpicked and has at least
+                5 years of experience.
+            </p>
 
-    <h1>Why trust us?</h1>
-    <p>
-    The staff of Acme.inc is looking forward to be the best
-    in the country. We have high standards and tight tolerances toward 
-    everyone in the company. Each member is handpicked and has at least
-    5 years of experience.
-    </p>
+            <h1>We have a physical store!</h1>
+            <p>If you are not a fan of just looking through a screen
+                when choosing your products you can visit our physical shop
+                on the map down below 
+                and our highly trained professionals will help you out with
+                testing out the products you want!
+            </p>
 
-    <h1>We have a physical store!</h1>
-    <p>
-    If you are not a fan of just looking through a screen
-    when choosing your products you can visit our physical shop
-    on the map down below 
-    and our highly trained proffetionals will help you out with
-    testing out the products you want!
-    </p>
-
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d131155.16219030877!2d67.27993316378262!3d30.251415867193295!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ed2d5ccb92413e9%3A0x1bcde8c12851b999!2sLoe%20Nekan!5e0!3m2!1sbg!2sbg!4v1739375830648!5m2!1sbg!2sbg" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-
-
-    <h1>Contact us</h1>
-    <p>
-     Phone ->  087 9648 765 
-    </p>
-    <p>
-     e-mail -> AcmeInc@example.com
-    </p>
-    
-</body>
+            <h1>Contact us</h1>
+            <p>
+             Phone ->  087 9648 765 
+            </p>
+            <p>
+             e-mail -> AcmeInc@example.com
+            </p>
+        </div>
+        <div class="right-side">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d131155.16219030877!2d67.27993316378262!3d30.251415867193295!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ed2d5ccb92413e9%3A0x1bcde8c12851b999!2sLoe%20Nekan!5e0!3m2!1sbg!2sbg!4v1739375830648!5m2!1sbg!2sbg" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+            </iframe>
+            <div class="images">
+                <img src="image1.jpg" alt="Store Image 1">
+                <img src="image2.jpg" alt="Store Image 2">
+            </div>
+        </div>
+    </body>
 </html>
